# notsuccess

./: .env.example  .gitignore  __init__.py  app.py  cli.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  agent_factory.py  base_agent.py  multi_agent.py
agents/specialized/: __init__.py  analyst_agent.py  coder_agent.py  researcher_agent.py  writer_agent.py
config/: __init__.py  api_keys.py  constants.py  logging_config.py  model_config.py  settings.py
core/: __init__.py  brain_engine.py  callback_manager.py  context_engine.py  decision_engine.py  execution_engine.py  nexus_agent.py  reasoning_core.py  response_generator.py  session_handler.py  stream_processor.py  task_orchestrator.py
exceptions/: __init__.py  agent_exceptions.py  base_exceptions.py  llm_exceptions.py
interfaces/: __init__.py
interfaces/api/: __init__.py  models.py  routes.py
interfaces/cli/: __init__.py  cli_app.py
interfaces/web/: __init__.py  web_app.py
llm/: __init__.py  function_calling.py  llm_client.py  llm_router.py  model_registry.py  response_streamer.py  token_optimizer.py
llm/providers/: __init__.py  anthropic_provider.py  base_provider.py  bytez_provider.py  deepseek_provider.py  google_gemini_provider.py  groq_provider.py  mistral_provider.py  nvidia_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
memory/: __init__.py  conversation_buffer.py  episodic_store.py  memory_compressor.py  memory_manager.py  memory_retriever.py  semantic_store.py  sliding_window.py  summary_buffer.py
memory/embeddings/: __init__.py  base_embedder.py  cohere_embedder.py  local_embedder.py  openai_embedder.py
memory/vector_stores/: __init__.py  base_vector_store.py  chromadb_store.py  pgvector_store.py  pinecone_store.py  qdrant_store.py
nexus_types/: __init__.py  agent_types.py  common_types.py  llm_types.py
pipelines/: __init__.py  agent_pipeline.py  base_pipeline.py  data_pipeline.py  processing_pipeline.py
planning/: __init__.py  dependency_resolver.py  plan_executor.py  plan_validator.py  task_decomposer.py  task_planner.py
prompts/: __init__.py  behavioral_anchoring.py  context_injection.py  conversation_framing.py  dynamic_prompt.py  few_shot_selector.py  prompt_builder.py  prompt_enforcer.py  prompt_manager.py  prompt_template.py  role_identity.py
prompts/system_prompts/: __init__.py  analyst_prompts.py  assistant_prompts.py  base_system_prompts.py  coder_prompts.py  researcher_prompts.py
rag/: __init__.py  document_loader.py  rag_pipeline.py  reranker.py  retriever.py  text_splitter.py
reasoning/: __init__.py  chain_of_thought.py  fact_checker.py  react_strategy.py  reasoning_orchestrator.py  reflexion_strategy.py  self_consistency.py  thought_processor.py  tree_of_thought.py
tools/: __init__.py  custom_tool_builder.py  tool_executor.py  tool_registry.py  tool_selector.py
tools/api_clients/: __init__.py  graphql_client.py  (+2 more)
utils/: __init__.py  helpers.py  validators.py
(+44 files in other folders)
